--- a/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/activity_login.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/activity_login.xml
@@ -77,6 +77,18 @@
             app:backgroundTint="@color/verde"
             app:cornerRadius="12dp"/>
 
+        <TextView
+            android:id="@+id/tvResetear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Olvidé mi contraseña"
+            android:textColor="@color/verde"
+            android:textSize="14sp"
+            android:gravity="center"
+            android:paddingTop="12dp"
+            android:clickable="true"
+            android:focusable="true"/>
+
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
