--- a/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/fragment_inicio.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/fragment_inicio.xml
@@ -8,8 +8,9 @@
     android:padding="16dp">
 
     <!-- MAPA -->
-    <com.google.android.gms.maps.MapView
-        android:id="@+id/map_view"
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/map_container"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
@@ -26,7 +27,7 @@
         android:padding="16dp"
         android:background="@drawable/card_redondeada"
         android:elevation="4dp"
-        app:layout_constraintTop_toBottomOf="@id/map_view"
+        app:layout_constraintTop_toBottomOf="@+id/map_container"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"
