--- a/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/fragment_perfil.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/fragment_perfil.xml
@@ -92,6 +92,17 @@
             android:paddingVertical="12dp"
             android:text="Editar"
             android:textColor="@android:color/white" />
+        <Button
+            android:id="@+id/btn_cambiarContrasenia"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:backgroundTint="@android:color/transparent"
+            android:text="Cambiar contraseña"
+            android:textColor="@color/verde_oscuro"
+            app:strokeColor="@color/verde_oscuro"
+            app:strokeWidth="2dp"
+            />
 
     </LinearLayout>
 
