--- a/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/activity_resetear_password.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/activity_resetear_password.xml
@@ -42,15 +42,22 @@
             android:paddingBottom="24dp"/>
 
         <!-- Email -->
-        <EditText
+        <com.google.android.material.textfield.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:hint="@string/email"
+            app:boxBackgroundColor="@android:color/white"
+            app:boxStrokeColor="@color/verde_oscuro"
+            app:hintTextColor="@color/verde_oscuro">
+            <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/etEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/et_redondeado"
-            android:hint="Correo electrónico"
             android:inputType="textEmailAddress"
             android:padding="16dp"
             android:layout_marginBottom="24dp"/>
+        </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Botón Enviar -->
         <com.google.android.material.button.MaterialButton
