--- a/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/activity_cambiar_password.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/activity_cambiar_password.xml
@@ -46,7 +46,6 @@
             android:id="@+id/etPasswordActual"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/et_redondeado"
             android:hint="Contraseña actual"
             android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
@@ -56,6 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="24dp"
+            android:hint="Nueva contraseña"
             app:endIconMode="password_toggle"
             app:boxBackgroundColor="@android:color/white"
             app:boxStrokeColor="@color/verde_oscuro"
@@ -64,11 +64,7 @@
             android:id="@+id/etPasswordNueva"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Nueva contraseña"
-            android:inputType="textPassword"
-            android:background="@drawable/et_redondeado"
-            android:padding="16dp"
-            android:layout_marginBottom="16dp"/>
+            android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Confirmar contraseña -->
@@ -85,10 +81,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Confirmar contraseña"
-            android:inputType="textPassword"
-            android:background="@drawable/et_redondeado"
-            android:padding="16dp"
-            android:layout_marginBottom="24dp"/>
+            android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Botón Cambiar -->
