--- a/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/fragment_cambiar_password.xml
+++ b/Laboratorio 3/TPInmobiliaria/app/src/main/res/layout/fragment_cambiar_password.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/fondo_degrade"
     android:padding="32dp"
-    tools:context=".ui.perfil.CambiarPasswordActivity">
+    tools:context=".ui.perfil.CambiarPasswordFragment">
 
     <LinearLayout
         android:id="@+id/layoutCambiarPassword"
@@ -42,12 +42,13 @@
             app:boxBackgroundColor="@android:color/white"
             app:boxStrokeColor="@color/verde_oscuro"
             app:hintTextColor="@color/verde_oscuro">
+
             <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPasswordActual"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Contraseña actual"
-            android:inputType="textPassword" />
+                android:id="@+id/etPasswordActual"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Contraseña actual"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Nueva contraseña -->
@@ -60,11 +61,12 @@
             app:boxBackgroundColor="@android:color/white"
             app:boxStrokeColor="@color/verde_oscuro"
             app:hintTextColor="@color/verde_oscuro">
+
             <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPasswordNueva"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="textPassword" />
+                android:id="@+id/etPasswordNueva"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textPassword" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Confirmar contraseña -->
@@ -76,12 +78,13 @@
             app:boxBackgroundColor="@android:color/white"
             app:boxStrokeColor="@color/verde_oscuro"
             app:hintTextColor="@color/verde_oscuro">
+
             <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/etPasswordConfirmar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Confirmar contraseña"
-            android:inputType="textPassword"/>
+                android:id="@+id/etPasswordConfirmar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Confirmar contraseña"
+                android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <!-- Botón Cambiar -->
